k8/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      restartPolicy: Always
      containers:
        - name: back
          image: ibarreche/cloud-back-ci
          ports:
            - containerPort: 8000
