k8/indexer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  selector:
    matchLabels:
      app: indexer
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
        - name: indexer
          image: ibarreche/cloud-indexer-ci
          ports:
            - containerPort: 3000
              name: indexer
