k8/front-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: front
  ports:
    - port: 4200
      targetPort: 4200
