k8/indexer-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indexer-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: indexer
  ports:
    - port: 3000
      targetPort: 3000
