k8/reporting-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: reporting
  ports:
    - port: 8080
      targetPort: 8080
